src/styles/layout/content.css
.layout-container__inner {
  max-inline-size: var(--content-width);
  padding-block: var(--space-l);
  padding-inline: var(--space-s);

  @media (--medium) {
    margin: auto;
    padding-block: var(--space-xl);
    padding-inline: var(--space-m);
  }

  @media (--large) {
    padding-inline: 0;
  }
}

.content__title {
  border-block-end: 0;

  &:has(+ .content__text) {
    margin-block-end: var(--space-m);
  }

  &:has(+ .content__meta) {
    margin-block-end: var(--space-3xs);
  }
}

.content__date {
  margin-inline-end: var(--space-4xs);
  font-size: var(--size-small);
}

.content__text {
  /* stylelint-disable-next-line */
  margin-trim: block-end;

  picture {
    inline-size: calc(100% + var(--space-l));
    max-inline-size: none;
    margin-inline: calc(-1 * var(--space-s));

    @media (--medium) {
      inline-size: auto;
      margin: auto;
    }

    .content__text--about & {
      inline-size: auto;
      max-inline-size: 18rem;
      margin: auto;

      @media (--medium) {
        max-inline-size: 22rem;
        margin-inline-end: 1.5rem;
      }
    }
  }

  img {
    @media (--medium) {
      border-radius: 10px;
    }
  }

  figure {
    .content__text--about & {
      @media (--medium) {
        margin-block-end: 0;
        float: inline-start;
      }
    }
  }
}

.content__intro {
  margin-block-end: var(--space-xl);

  h2 {
    margin-block-start: 0;
    font-family: var(--header-font-family);
    font-size: var(--step-4);
    border-block-end: 0;
    font-weight: 800;

    strong:nth-of-type(1) {
      color: var(--purple);
      font-weight: inherit;
    }
  }

  strong:nth-of-type(1) {
    color: var(--orange);
  }

  strong:nth-of-type(2) {
    color: var(--yellow);
  }

  strong:nth-of-type(3) {
    color: var(--yellow-green);
  }

  strong:nth-of-type(4) {
    color: var(--navy);
  }
}

.content__intro p {
  max-inline-size: 55ch;
  font-size: var(--size-large);
}

.recent-posts__list {
  padding: 0;
  list-style: none;
}

.recent-posts__list-item {
  p {
    margin-block-end: 0;
  }
}

.recent-posts__title {
  font-size: var(--step-3);
}

.recent-posts__post-title {
  margin-block-end: 0;
}

.content__text--uses {
  ul {
    padding: 0;
  }

  li {
    margin: 0;
    padding: 0;
    list-style: none;
  }
}

.content__text--speaking {
  ul {
    display: grid;
    gap: var(--space-s);
    padding-inline-start: 0;
    list-style: none;

    @media (--medium) {
      grid-template-columns: repeat(2, 1fr);
      gap: var(--space-l);
    }
  }

  li {
    margin-block-end: 0;
    padding: var(--space-m);
    border-radius: 16px;
    background: var(--background-color);

    a:focus-within {
      outline: none;
      box-shadow: inset 0 -0.375em 0 0 var(--secondary-link);
    }

    &:hover:has(a),
    &:focus-within:has(a) {
      outline: solid 5px var(--primary-link-light);
    }
  }

  h3 {
    margin-block-end: var(--space-2xs);
  }

  li p {
    margin-block-end: var(--space-2xs);
  }
}

